tenzir/tests/exec/expr/escape/basic/invalid_sequence.tql
// error: true

from {
  x: "\U9999999",
}
